[package]
name = "frost-utilization"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
frost-dalek = { git="https://github.com/n00m4d/frost-dalek.git", branch="feat/dump-sec-key" }
clap = { version = "4.5.23", features = ["derive", "cargo"] }
serde_json = "1.0"
serde = { version="1.0.217", features=["derive"] }
rand = { version="0.7" }
bs58 = "0.5.1"
